--- a/theme/default.css
+++ b/theme/default.css
@@ -50,7 +50,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('https://www.example.com/snowflakes.png') center center no-repeat;
+    background: url('') center center no-repeat;
     background-size: cover;
     opacity: 0.3;
     pointer-events: none;
