--- a/theme/christmas.css
+++ b/theme/christmas.css
@@ -35,12 +35,14 @@ body {
   }
   
   /* 页脚样式 */
-  .footer {
-    background-color: #33333300;
-    color: #ffffff;
-    padding: 20px;
-    text-align: center;
-    text-shadow: 1px 1px 5px #000000; /* 增加阴影以突出文字 */
+  footer {
+    background: black;
+    color: transparent;
+    -webkit-background-clip: text;
+    border: 2px solid #00000009; /* 边框颜色和厚度 */
+    border-radius: 15px; /* 圆角的半径 */
+    padding: 10px; /* 内边距 */
+
   }
   
   /* 标题样式 */
