--- a/theme.css
+++ b/theme.css
@@ -56,7 +56,7 @@ h1, h2, h3 {
 }
 
 h1.LM#LM {
-  font-size: 2.5rem;
+  font-size:300%;
   font-weight: 700;
   font-family: 'Orbitron', sans-serif;
   text-transform: uppercase;
